[package]
name = "rudra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1.6"
json = "0.12.4"
url = {version = "2.2.2", features = ["serde"]}
toml = "0.5.9"
serde = {version = "1.0", features = ["derive"]}
serde_derive = "1.0"
url_serde = "0.2.0"
